--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
-Hola Mundo primera linea
-Segunda linea
-Tercera linea
-Cuarta linea
-Quinta linea
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Hola Mundo primera linea</h1>
+    <a>Segunda linea</a>
+    <a>Tercera linea</a>
+    <a>Cuarta linea</a>
+    <a>Quinta linea</a>
+
+</body>
+</html>
